--- a/package.json
+++ b/package.json
@@ -4,7 +4,19 @@
   "description": "Ubiatarplay presell campaing",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha test/token_erc20.js",
+    "compile": "./node_modules/.bin/truffle compile"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "truffle-contract": "^2.0.5",
+    "web3": "^0.18.4"
+  },
+  "devDependencies": {
+    "bip39": "2.3.0",
+    "ethereumjs-testrpc": "^2.2.7",
+    "mocha": "^3.5.3",
+    "truffle": "^4.0.0-beta.2"
   },
   "repository": {
     "type": "git",
