--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Ubiatarplay presell campaing",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/PreSell.js",
-    "compile": "./node_modules/.bin/truffle compile"
+    "test_preSell": "mocha test/PreSell.js",
+    "compile": "./node_modules/.bin/truffle compile",
+    "test_owned": "mocha test/Owned.js"
   },
   "dependencies": {
     "bluebird": "3.5.1",
