--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Ubiatarplay presell campaing",
   "main": "index.js",
   "scripts": {
+    "compile": "./node_modules/.bin/truffle.cmd compile",
     "test_preSell": "mocha test/PreSell.js",
-    "compile": "./node_modules/.bin/truffle compile",
     "test_owned": "mocha test/Owned.js",
-    "test_ownedAttacker": "truffle test/OwnedAttacker.sol"
+    "test_all": "truffle.cmd test"
   },
   "dependencies": {
     "bluebird": "3.5.1",
