--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "./node_modules/.bin/truffle.cmd compile",
+    "testrpc": "./node_modules/.bin/testrpc.cmd",
     "test_preSell": "mocha test/PreSell.js",
     "test_owned": "mocha test/Owned.js",
     "test_all": "truffle.cmd test",
@@ -21,6 +22,8 @@
   },
   "devDependencies": {
     "bip39": "^2.3.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "ethereumjs-testrpc": "2.2.7",
     "mocha": "3.5.3",
     "truffle": "4.0.0-beta.2"
