--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "bip39": "2.3.0",
     "ethereumjs-testrpc": "2.2.7",
+    "lodash": "^4.17.4",
     "mocha": "3.5.3",
     "rimraf": "^2.6.2",
     "truffle": "4.0.0-beta.2"
