--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "testPreSell": "mocha test/PreSell.js",
     "testOwned": "mocha test/Owned.js",
     "win_compile": "rimraf build && truffle.cmd compile",
-    "testrpc": "./node_modules/.bin/testrpc.cmd",
+    "win_testrpc": "./node_modules/.bin/testrpc.cmd",
+    "testrpc": "./node_modules/.bin/testrpc",
     "testSolidity": "./node_modules/.bin/truffle test",
-    "test_all": "truffle.cmd test",
+    "win_test_all": "truffle.cmd test",
+    "test_all": "truffle test",
+    "deploy": "truffle deploy",
     "migrate": "./node_modules/.bin/truffle.cmd migrate --network ropsten"
   },
   "dependencies": {
@@ -24,14 +27,14 @@
     "zeppelin-solidity": "^1.3.0"
   },
   "devDependencies": {
-    "bip39": "^2.3.0",
+    "bip39": "2.3.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "ethereumjs-testrpc": "2.2.7",
     "lodash": "^4.17.4",
     "mocha": "3.5.3",
     "rimraf": "^2.6.2",
-    "truffle": "4.0.1"
+    "truffle": "4.0.0-beta.2"
   },
   "repository": {
     "type": "git",
