--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "test": "mocha test/Owned.js test/PreSell.js",
     "testPreSell": "mocha test/PreSell.js",
     "testOwned": "mocha test/Owned.js",
-    "win_compile": "rimraf build && truffle.cmd compile",
-    "win_testrpc": "./node_modules/.bin/testrpc.cmd",
     "testrpc": "./node_modules/.bin/testrpc",
     "testSolidity": "./node_modules/.bin/truffle test",
-    "win_test_all": "truffle.cmd test",
     "test_all": "truffle test",
     "deploy": "truffle deploy",
-    "migrate": "./node_modules/.bin/truffle.cmd migrate --network ropsten"
+    "migrate": "./node_modules/.bin/truffle.cmd migrate --network ropsten",
+    "win_compile": "rimraf build && truffle.cmd compile",
+    "win_testrpc": "./node_modules/.bin/testrpc.cmd",
+    "win_test_all": "truffle.cmd test"
   },
   "dependencies": {
     "bluebird": "3.5.1",
@@ -27,7 +27,7 @@
     "zeppelin-solidity": "^1.3.0"
   },
   "devDependencies": {
-    "bip39": "2.3.0",
+    "bip39": "^2.3.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "ethereumjs-testrpc": "2.2.7",
