--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "zeppelin-solidity": "^1.3.0"
   },
   "devDependencies": {
-    "bip39": "^2.3.0",
+    "bip39": "2.3.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "ethereumjs-testrpc": "2.2.7",
