--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test_all": "truffle test",
     "deploy": "truffle deploy",
     "console": "truffle console --network ganache",
+    "migrateMain": "./node_modules/.bin/truffle migrate --network main",
     "migrateRopsten": "./node_modules/.bin/truffle.cmd migrate --network ropsten",
     "migrateGanache": "./node_modules/.bin/truffle migrate --network ganache",
     "win_deploy": "truffle.cmd deploy",
